# tooned

./: .editorconfig  .gitattributes  .gitignore  .mise.toml  .sops.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.txt  CONTRIBUTING.md  Cargo.toml  LICENSING.md  README.md  SECURITY.md  clippy.toml  deny.toml  flake.nix  justfile  towncrier.toml
.cargo/: config.toml.example
.config/: rail.toml
.githooks/: commit-msg  pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
changelog.d/: +a-criterion-benchmark-and-an-ignored-latency-guardrail.added.md  +added-an-agent-agnostic-tooned-agent-skills-standard-skill.added.md  +agent-hook-integrations-for-droid-factory-ai-devin.added.md  +both-installers-write-via-a-same-directory-temp-file-then-atomic-rename-so.added.md  +changelog-d-fragment-workflow.added.md  +ci-added-criterion-benchmark-and-latency-guardrail-jobs.added.md  +claude-code-posttooluse-hook-integration-tooned-hook-run.added.md  +codex-cli-hook-integration-tooned-hook-run-codex.added.md  +dual-licensing-agpl-3-0-only-commercial-mirroring-toon-lsp.added.md  +mcp-server-tooned-mcp-serve-rmcp-stdio-transport.added.md  +metrics-aggregate-sums-no-longer-overflow-on-i64.fixed.md  +monorepo-build-tooling-config-rail-toml-for-cargo-rail.added.md  +regression-tested-dependency-boundaries-no-network-capable-crate-e-g.added.md  +tooned-cli-added-devin-cli-hook-integration-tooned-hook.added.md  +tooned-cli-added-droid-factory-ai-hook-integration-tooned.added.md  +tooned-cli-added-index-compact-sqlite-wal-checkpoint-index.added.md  +tooned-cli-added-plugin-wrapped-agent-hooks-for-opencode-kilo.added.md  +tooned-cli-added-short-flags-for-the-most-common.added.md  +tooned-cli-added-toml-configuration-file-support-loaded-from.added.md  +tooned-cli-bin-tooned-standalone-cli-surface-convert-file.added.md  +tooned-cli-case-insensitive-paths.added.md  +tooned-cli-convert-to-json-no-longer-materializes-an.security.md  +tooned-cli-devin-cli-hook-hardening-tooned-hook-install.fixed.md  +tooned-cli-hook-zero-alloc-hot-path.changed.md  +tooned-cli-human-readable-passthrough-reasons.fixed.md  +tooned-cli-pipe-wrap-zero-alloc-maybe_tooned_in.changed.md  +tooned-cli-release-pipeline-added-hidden-completions-and-man.added.md  +tooned-cli-tooned-core-format-hint-coverage-tests-for-all-cli.fixed.md  +tooned-cli-tooned-dashboard-now-fails-gracefully-with-a.fixed.md  +tooned-cli-tooned-hook-install-no-longer-appends-a.fixed.md  +tooned-cli-tooned-index-closed-001-phase-8-convergence-gaps.fixed.md  +tooned-convert-tooned-cli-added-prototype-onto-object-notation-tabular-output.added.md  (+25 more)
crates/tooned-cli/: Cargo.toml
crates/tooned-cli/benches/: hot_path.rs
crates/tooned-cli/src/: config.rs  main.rs  metrics_recorder.rs  tui.rs
crates/tooned-cli/src/cli/: check.rs  config_cmd.rs  convert.rs  dashboard.rs  diff.rs  heatmap.rs  index.rs  io.rs  lint.rs  metrics.rs  mod.rs  pipe.rs  stats.rs  token_savings.rs  wrap.rs
crates/tooned-cli/src/hooks/: claude_code.rs  codex.rs  devin.rs  doctor.rs  droid.rs  kilo.rs  mod.rs  opencode.rs  pi.rs  plugin.rs
crates/tooned-cli/src/mcp/: mod.rs  server.rs
crates/tooned-cli/tests/: claude_code_hook.rs  cli_check.rs  cli_check_xml.rs  cli_completions.rs  cli_config.rs  cli_convert.rs  cli_convert_xml.rs  cli_dashboard.rs  cli_diff.rs  cli_help.rs  cli_index.rs  cli_lint.rs  cli_man.rs  cli_metrics.rs  cli_pipe.rs  cli_pipe_xml.rs  cli_stats.rs  cli_token_savings.rs  cli_wrap.rs  codex_hook.rs  codex_hook_watchdog.rs  devin_hook.rs  docs_content.rs  droid_hook.rs  hook_atomic_write.rs  hook_coexistence_claude_code.rs  hook_coexistence_codex.rs  hook_doctor.rs  hook_install_all.rs  hook_install_claude_code.rs  hook_install_codex.rs  hook_install_devin.rs  hook_install_droid.rs  hook_install_path_check.rs  hook_install_plugin.rs  hook_no_panic_proptest.rs  hook_status.rs  hook_uninstall.rs  hot_path_latency.rs  mcp_detect_xml.rs  (+5 more)
crates/tooned-cli/tests/common/: mcp_client.rs  mod.rs  xml.rs
crates/tooned-convert/: Cargo.toml
crates/tooned-convert/examples/: profile_decode.rs  profile_jsonbytes.rs  profile_phases.rs  profile_total.rs
crates/tooned-convert/src/: cbor.rs  json5.rs  lib.rs  msgpack.rs  onto.rs  shape.rs  tron.rs
crates/tooned-convert/tests/: roundtrip.rs  zero_alloc.rs
crates/tooned-core/: Cargo.toml
crates/tooned-core/src/: convert.rs  detect.rs  error.rs  lib.rs  parse.rs  shape.rs  xml.rs
crates/tooned-core/tests/: duplicate_keys.rs  multi_format_proptest.rs  never_regression_proptest.rs  no_heavy_deps.rs  no_panic_proptest.rs  roundtrip_proptest.proptest-regressions  roundtrip_proptest.rs  xml_never_regression_proptest.rs  xml_no_panic_proptest.rs  xml_roundtrip_proptest.proptest-regressions  xml_roundtrip_proptest.rs  zero_alloc.rs
crates/tooned-core/tests/common/: mod.rs  xml.rs
crates/tooned-csv/: Cargo.toml
crates/tooned-csv/src/: lib.rs
crates/tooned-detect/: Cargo.toml
crates/tooned-detect/src/: lib.rs
crates/tooned-detect/tests/: zero_alloc.rs
crates/tooned-index/: Cargo.toml
crates/tooned-index/src/: filter.rs  gitignore.rs  lib.rs  scan.rs  schema.rs  sync.rs
crates/tooned-index/tests/: gitignore.rs  scan.rs  scan_performance.rs  sync.rs  watch.rs
crates/tooned-json/: Cargo.toml
crates/tooned-json/src/: lib.rs
crates/tooned-metrics/: Cargo.toml
crates/tooned-metrics/src/: lib.rs  store.rs
crates/tooned-parse/: Cargo.toml
crates/tooned-parse/src/: lib.rs
crates/tooned-token/: Cargo.toml
crates/tooned-token/src/: cost.rs  lib.rs
crates/tooned-toml/: Cargo.toml
crates/tooned-toml/src/: lib.rs
crates/tooned-toon/: Cargo.toml
crates/tooned-toon/benches/: dict.rs
crates/tooned-toon/src/: dict.rs  lib.rs
crates/tooned-toon/tests/fixtures/: ecommerce_orders.json
crates/tooned-types/: Cargo.toml
crates/tooned-types/src/: lib.rs
crates/tooned-xml/: Cargo.toml
crates/tooned-xml/src/: lib.rs
crates/tooned-yaml/: Cargo.toml
crates/tooned-yaml/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: maybe_tooned.rs  xml_parse.rs
(+86 files in other folders)
