[workspace]
resolver = "3"
members = [
  "crates/tooned-core",
  "crates/tooned-index",
  "crates/tooned-cli",
  "crates/tooned-metrics",
  "crates/tooned-types",
  "crates/tooned-parse",
  "crates/tooned-detect",
  "crates/tooned-json",
  "crates/tooned-yaml",
  "crates/tooned-toml",
  "crates/tooned-csv",
  "crates/tooned-xml",
  "crates/tooned-toon",
  "crates/tooned-convert",
  "crates/tooned-token",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["w0wl0lxd"]
license = "AGPL-3.0-only"
repository = "https://github.com/w0wl0lxd/tooned"
categories = ["development-tools"]

[workspace.dependencies]
anyhow = "1.0"
blake3 = "^1.8.5"                                                       #unified
cbor4ii = { version = "^1.2.2", features = ["serde1", "use_std"] }      #unified
clap = { version = "4", features = ["derive"] }
criterion = "^0.8.2"                                                    #unified
csv = "^1.4.0"                                                          #unified
json5 = "^1.3.1"                                                        #unified
libc = "^0.2.186"                                                       #unified
proptest = "^1.11.0"                                                    #unified
rmp-serde = "^1.3.1"                                                    #unified
rusqlite = { version = "^0.40.1", features = ["bundled"] }              #unified
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "^0.9.34"                                                  #unified
sonic-rs = "0.5"                                                        #unified
tempfile = "^3.27.0"                                                    #unified
thiserror = "2"
toml = "^1.1.3"                                                         #unified
toon-lsp = "0.7.21"
tooned-convert = { path = "crates/tooned-convert", version = "^0.1.1" } #unified
tooned-core = { path = "crates/tooned-core", version = "^0.1.1" }       #unified
tooned-csv = { path = "crates/tooned-csv", version = "^0.1.1" }         #unified
tooned-detect = { path = "crates/tooned-detect", version = "^0.1.1" }   #unified
tooned-index = { path = "crates/tooned-index", version = "^0.1.1" }     #unified
tooned-json = { path = "crates/tooned-json", version = "^0.1.1" }       #unified
tooned-metrics = { path = "crates/tooned-metrics", version = "^0.1.1" } #unified
tooned-parse = { path = "crates/tooned-parse", version = "^0.1.1" }     #unified
tooned-toml = { path = "crates/tooned-toml", version = "^0.1.1" }       #unified
tooned-toon = { path = "crates/tooned-toon", version = "^0.1.1" }       #unified
tooned-token = { path = "crates/tooned-token", version = "^0.1.1" }     #unified
tooned-types = { path = "crates/tooned-types", version = "^0.1.1" }     #unified
tooned-xml = { path = "crates/tooned-xml", version = "^0.1.1" }         #unified
tooned-yaml = { path = "crates/tooned-yaml", version = "^0.1.1" }       #unified

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
# Pedantic enforced project-wide (CI: `clippy --all-features -- -D warnings`).
# Allow-list below is deliberately minimal: high-noise or API-driven lints only.
pedantic = { level = "warn", priority = -1 }
# Constitution Principle I (Fail-Safe Passthrough, NON-NEGOTIABLE): no unwrap/expect/
# panic on the conversion hot path or hook binary entrypoint. These are opt-in
# "restriction" lints (not part of pedantic), so they must be enabled explicitly here
# to actually be enforced by `clippy --all-features -- -D warnings`, rather than relying
# on manual review as the only guard. A rare, deliberate CLI-only exception should use a
# scoped `#[allow(clippy::expect_used)]` with a comment, not a workspace-wide loosening.
# This block mirrors the personal engineering standard already applied to the
# vetanvil-backend and polymoney workspaces (their Decimal/HFT-specific lints are
# deliberately NOT carried over — not relevant to a CLI/library conversion tool).
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
get_unwrap = "deny"
indexing_slicing = "deny"          # tooned parses untrusted external bytes by design; OOB indexing must be an explicit Result, not a panic
clone_on_ref_ptr = "deny"
redundant_clone = "deny"
manual_assert = "deny"
disallowed_methods = "deny"        # see clippy.toml: bans Option/Result::unwrap_or(_default) silent-default patterns
must_use_candidate = "allow"
default_trait_access = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
doc_markdown = "allow"
uninlined_format_args = "allow"
too_many_lines = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
