[package]
name = "tooned-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tooned-core = { path = "../crates/tooned-core" }

[workspace]
members = ["."]

[[bin]]
name = "xml_parse"
path = "fuzz_targets/xml_parse.rs"

[[bin]]
name = "maybe_tooned"
path = "fuzz_targets/maybe_tooned.rs"
