[package]
name = "tooned"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "tooned CLI: convert/check/pipe/wrap, the .tooned/ index, agent hook installers, and the MCP server"
categories.workspace = true
readme = "../../README.md"
keywords = ["toon", "cli", "mcp", "ai-agent", "llm"]

[[bin]]
name = "tooned"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = "4.6"
clap_mangen = "0.2"
rmcp = { version = "2", features = ["transport-io"] }
same-file = "1"
similar = "2.7"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
tooned-core = { workspace = true }                                            #unified
tooned-index = { workspace = true }                                           #unified
tooned-metrics = { workspace = true } #unified

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
criterion = { workspace = true } #unified
predicates = "3"
proptest = { workspace = true }  #unified
tempfile = { workspace = true }  #unified

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1"

[[bench]]
name = "hot_path"
harness = false

[lints]
workspace = true
