[package]
name = "tooned"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "tooned rewrites JSON-shaped tool output as the denser TOON format whenever TOON is smaller, and works as a Claude Code, Codex, Devin, or MCP server integration"
categories.workspace = true
readme = "../../README.md"
keywords = ["toon", "cli", "mcp", "ai-agent", "llm"]

[[bin]]
name = "tooned"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = "4.6.7"
clap_mangen = "0.3.0"
colorgrad = "0.8"
crossterm = "0.29"
ratatui = "0.30.2"
rmcp = { version = "2.2.0", features = ["transport-io"] }
same-file = "1.0.6"
serde = { workspace = true }
serde_json = { workspace = true }
shlex = "2.0.1"
similar = "3.1.1"
sonic-rs = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
toml = { workspace = true }
tooned-core = { workspace = true }                                            #unified
tooned-index = { workspace = true }                                           #unified
tooned-metrics = { workspace = true }                                         #unified
tui-bar-graph = "0.3.5"
tui-big-text = "0.8.7"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true } #unified

[dev-dependencies]
assert_cmd = "2"
criterion = { workspace = true } #unified
predicates = "3"
proptest = { workspace = true }  #unified
tempfile = { workspace = true }  #unified

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1"

[[bench]]
name = "hot_path"
harness = false

[lints]
workspace = true
