[package]
name = "tooned-convert"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
name = "tooned_convert"
path = "src/lib.rs"

[dependencies]
tooned-types = { path = "../tooned-types", version = "0.1.0" }
tooned-detect = { path = "../tooned-detect", version = "0.1.0" }
tooned-parse = { path = "../tooned-parse", version = "0.1.0" }
tooned-json = { path = "../tooned-json", version = "0.1.0" }
tooned-yaml = { path = "../tooned-yaml", version = "0.1.0" }
tooned-toml = { path = "../tooned-toml", version = "0.1.0" }
tooned-csv = { path = "../tooned-csv", version = "0.1.0" }
tooned-xml = { path = "../tooned-xml", version = "0.1.0" }
tooned-toon = { path = "../tooned-toon", version = "0.1.0" }
tiktoken-rs = "0.12"
serde_json = { workspace = true }

[lints]
workspace = true
