[package]
name = "tooned-convert"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Conversion orchestration and shape classification for the tooned workspace"
categories.workspace = true

[lib]
name = "tooned_convert"
path = "src/lib.rs"

[dependencies]
cbor4ii = { workspace = true }       #unified
json5 = { workspace = true }         #unified
rmp-serde = { workspace = true }     #unified
serde_json = { workspace = true }
sonic-rs = { workspace = true }
tiktoken-rs = "0.12"
tooned-csv = { workspace = true }    #unified
tooned-detect = { workspace = true } #unified
tooned-json = { workspace = true }   #unified
tooned-parse = { workspace = true }  #unified
tooned-toml = { workspace = true }   #unified
tooned-toon = { workspace = true }   #unified
tooned-types = { workspace = true }  #unified
tooned-xml = { workspace = true }    #unified
tooned-yaml = { workspace = true }   #unified
tooned-token = { workspace = true }  #unified

[lints]
workspace = true
