[package]
name = "tooned-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Doctype detection and adaptive TOON-vs-JSON conversion, dependency-minimal for embedding in a hot hook path"
categories.workspace = true
readme = "../../README.md"
keywords = ["toon", "json", "llm", "tokens", "compression"]

[lib]
name = "tooned_core"
path = "src/lib.rs"

[dependencies]
tooned-types = { path = "../tooned-types", version = "0.1.0" }
tooned-convert = { path = "../tooned-convert", version = "0.1.0" }
tooned-toon = { path = "../tooned-toon", version = "0.1.0" }
tooned-json = { path = "../tooned-json", version = "0.1.0" }
tooned-xml = { path = "../tooned-xml", version = "0.1.0" }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
sonic-rs = "0.5"
serde_yaml = "0.9"
toml = "1"
csv = "1"

[package.metadata.cargo-machete]
ignored = ["criterion"]

[lints]
workspace = true
