[package]
name = "tooned-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Doctype detection and adaptive TOON-vs-JSON conversion, dependency-minimal for embedding in a hot hook path"
categories.workspace = true
readme = "../../README.md"
keywords = ["toon", "json", "llm", "tokens", "compression"]

[lib]
name = "tooned_core"
path = "src/lib.rs"

[dependencies]
serde_json = { workspace = true }
tooned-convert = { workspace = true } #unified
tooned-json = { workspace = true }    #unified
tooned-toon = { workspace = true }    #unified
tooned-types = { workspace = true }   #unified
tooned-xml = { workspace = true }     #unified

[dev-dependencies]
criterion = { workspace = true }  #unified
csv = { workspace = true }        #unified
heapster = "0.9.0"
proptest = { workspace = true }   #unified
serde_yaml = { workspace = true } #unified
sonic-rs = { workspace = true }
toml = { workspace = true }       #unified

[package.metadata.cargo-machete]
ignored = ["criterion"]

[lints]
workspace = true
