[package]
name = "tooned-csv"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
name = "tooned_csv"
path = "src/lib.rs"

[dependencies]
csv = { workspace = true }          #unified
serde_json = { workspace = true }
tooned-parse = { workspace = true } #unified

[lints]
workspace = true
