[package]
name = "tooned-detect"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
name = "tooned_detect"
path = "src/lib.rs"

[dependencies]
tooned-types = { workspace = true } #unified
tooned-xml = { workspace = true }   #unified

[lints]
workspace = true
