[package]
name = "tooned-detect"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
name = "tooned_detect"
path = "src/lib.rs"

[dependencies]
cbor4ii = { workspace = true }      #unified
rmp-serde = { workspace = true }    #unified
serde_json = { workspace = true }   #unified
tooned-types = { workspace = true } #unified
tooned-xml = { workspace = true }   #unified

[dev-dependencies]
heapster = "0.8.0"

[lints]
workspace = true
