[package]
name = "tooned-index"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The .tooned/ SQLite project index: scan, fingerprint, cache, invalidate"
categories.workspace = true
readme = "../../README.md"
keywords = ["toon", "index", "sqlite", "cache"]

[lib]
name = "tooned_index"
path = "src/lib.rs"

[dependencies]
blake3 = { workspace = true } #unified
ignore = "0.4"
notify = { version = "8.2", default-features = false }
notify-debouncer-mini = { version = "0.7", default-features = false }
rusqlite = { workspace = true } #unified
thiserror = { workspace = true }
tooned-core = { workspace = true }                                    #unified

[target.'cfg(target_os = "macos")'.dependencies]
notify = { version = "8.2", default-features = false, features = [
  "macos_kqueue",
] }
notify-debouncer-mini = { version = "0.7", default-features = false, features = [
  "macos_kqueue",
] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true } #unified

[dev-dependencies]
tempfile = { workspace = true } #unified

[lints]
workspace = true
