[package]
name = "tooned-json"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON/NDJSON parsing for the tooned workspace"
categories.workspace = true

[lib]
name = "tooned_json"
path = "src/lib.rs"

[dependencies]
serde_json = { workspace = true }
sonic-rs = { workspace = true }
tooned-parse = { workspace = true } #unified

[lints]
workspace = true
