[package]
name = "tooned-metrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Local-only, opt-out token-savings metrics ledger for tooned"
categories.workspace = true
readme = "../../README.md"
keywords = ["toon", "metrics", "sqlite"]

[dependencies]
blake3 = { workspace = true }       #unified
rusqlite = { workspace = true }     #unified
serde = { workspace = true }
serde_json = { workspace = true }
sonic-rs = { workspace = true }
thiserror = { workspace = true }
tooned-token = { workspace = true } #unified
tooned-types = { workspace = true } #unified

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
