[package]
name = "tooned-toml"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
name = "tooned_toml"
path = "src/lib.rs"

[dependencies]
tooned-parse = { path = "../tooned-parse", version = "0.1.0" }
toml = "1"
serde_json = { workspace = true }

[lints]
workspace = true
