[package]
name = "tooned-toml"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "TOML parsing for the tooned workspace"
categories.workspace = true

[lib]
name = "tooned_toml"
path = "src/lib.rs"

[dependencies]
serde_json = { workspace = true }
toml = { workspace = true }         #unified
tooned-parse = { workspace = true } #unified

[lints]
workspace = true
