[package]
name = "tooned-toon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
name = "tooned_toon"
path = "src/lib.rs"

[dependencies]
tooned-types = { path = "../tooned-types", version = "0.1.0" }
tooned-parse = { path = "../tooned-parse", version = "0.1.0" }
toon-lsp = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
