[package]
name = "tooned-toon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "TOON encode/decode wrapper for the tooned workspace"
categories.workspace = true

[lib]
name = "tooned_toon"
path = "src/lib.rs"

[dependencies]
serde_json = { workspace = true }
toon-lsp = { workspace = true }
tooned-parse = { workspace = true } #unified
tooned-types = { workspace = true } #unified

[lints]
workspace = true
