[package]
name = "tooned-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
name = "tooned_types"
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
