[package]
name = "tooned-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared public types for the tooned workspace"
categories.workspace = true

[lib]
name = "tooned_types"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
