[package]
name = "tooned-xml"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
name = "tooned_xml"
path = "src/lib.rs"

[dependencies]
tooned-types = { path = "../tooned-types", version = "0.1.0" }
tooned-parse = { path = "../tooned-parse", version = "0.1.0" }
quick-xml = { version = "0.41.0", default-features = false }
serde_json = { workspace = true }

[lints]
workspace = true
