[package]
name = "tooned-xml"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "XML detection and conversion to serde_json::Value for the tooned workspace"
categories.workspace = true

[lib]
name = "tooned_xml"
path = "src/lib.rs"

[dependencies]
quick-xml = { version = "0.41.0", default-features = false }
serde_json = { workspace = true }
tooned-parse = { workspace = true }                          #unified
tooned-types = { workspace = true }                          #unified

[lints]
workspace = true
