[package]
name = "tooned-yaml"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
name = "tooned_yaml"
path = "src/lib.rs"

[dependencies]
tooned-types = { path = "../tooned-types", version = "0.1.0" }
tooned-parse = { path = "../tooned-parse", version = "0.1.0" }
serde_yaml = "0.9"
serde_json = { workspace = true }

[lints]
workspace = true
