[package]
name = "tooned-yaml"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "YAML parsing for the tooned workspace"
categories.workspace = true

[lib]
name = "tooned_yaml"
path = "src/lib.rs"

[dependencies]
serde_json = { workspace = true }
serde_yaml = { workspace = true }   #unified
tooned-parse = { workspace = true } #unified

[lints]
workspace = true
